adminモデルのテストコードの実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,7 @@ ja:
         name: 団体名
         email: Eメール
         password: パスワード
+        password_confirmation: パスワード（確認用）
       user:
         name: ユーザー名
       client:
