clientモデルのテストコードの実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -13,6 +13,7 @@ ja:
         tel: 電話番号
         postal_code: 郵便番号
         address: 住所
+        charge_tel: 担当者電話番号
       visit:
         title: タイトル
         date: 日付
