--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,6 +6,7 @@ ja:
         email: Eメール
         password: パスワード
         password_confirmation: パスワード（確認用）
+        current_password: 現在のパスワード
       user:
         name: ユーザー名
       client:
