--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,7 @@ ja:
         tel: 電話番号
         postal_code: 郵便番号
         address: 住所
+        charge: 担当者名
         charge_tel: 担当者電話番号
       visit:
         title: タイトル
